  interface controllers have been merged and properly integrated into the
  regular alsa backend driver. Being still experimental, this special mode
  of operation is now triggered only when "hw:N,2" is specified as the alsa
  device name (N = soundcard index of snd-usb-usx2y module).

- Messages window limit is now enforced only when the line count exceeds
  in one third the user configured line count maximum.

- XRUN status items are kept double-dashed if none has been detected.


0.2.13   2004-11-21  Retouches and minor optimizations.

- Main window is now properly minimized instead of simply hidden when
  the system tray icon is not available nor opted in (as suggested
  by Florian Schmidt).
  
- Some informational status items are now updated 10 times less frequently
  (e.g. CPU Load, Sample Rate, Buffer Size, Realtime Mode, etc.), lowering
  the CPU burden of most probably redundant status updates.

- XRUN detection and statistics are being conditionally included if
  jack_get_xrun_delayed_usecs() is available (as of JACK 0.99.7+ CVS).

- Fixed ancient bug on client shutdown event handling, which was
  invoking the xrun notification handler by mistake.

- Support for maximum scheduling delay status added (EXPERIMENTAL);
  this relies on jack_get_max_delayed_usecs() function availability at
  configure time, depending on a Lee Revell's non-official JACK patch.

- Patchbay Activate button is now a toggle button widget, allowing the
  deactivation of the current patchbay profile.

- Reset-status icon has been changed to a simple red circle instead of
  previous one which was much like a power-switch symbol.

- Preset selection has been added to the context menu.


0.2.12a  2004-10-11  Audio connections now naturally sorted.

- Client port list on audio connections are now hopefully fixed for good;
  the sort comparison function now takes full natural order into account.


0.2.12   2004-10-08  Larger icons and font option on connections/patchbay.
