@@ -24,9 +24,9 @@
 
 #define QJACKCTL_TITLE      "JACK Audio Connection Kit"
 #define QJACKCTL_SUBTITLE   "Qt GUI Interface"
-#define QJACKCTL_VERSION    "0.2.13.11"
+#define QJACKCTL_VERSION    "0.2.13.12"
 #define QJACKCTL_WEBSITE    "http://qjackctl.sourceforge.net"
-#define QJACKCTL_COPYRIGHT  "Copyright (C) 2003-2004, rncbc aka Rui Nuno Capela. All rights reserved."
+#define QJACKCTL_COPYRIGHT  "Copyright (C) 2003-2005, rncbc aka Rui Nuno Capela. All rights reserved."
 
 #endif  // __qjackctlAbout_h
 
